--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=prod-ready-features
 
-spring.datasource.url=jdbc:mysql://localhost:3306/prod_ready_features?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/prod_ready_features?useSSL=false&allowPublicKeyRetrieval=true
+
 spring.datasource.username=root
 spring.datasource.password=Stoicism@123
 
@@ -11,3 +12,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.devtools.restart.enabled=true
 spring.devtools.restart.exclude=com/codingshuttle/anuj/prod_ready_features/**/dto/**
+
+RestService.base.url=http://localhost:8081/
