--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,13 @@ spring.devtools.restart.enabled=true
 spring.devtools.restart.exclude=com/codingshuttle/anuj/prod_ready_features/**/dto/**
 
 RestService.base.url=http://localhost:8081/
+
+#actuator configuration
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+info.app.internal.author=Aryan Kiran
+management.info.build.enabled=true
+management.info.git.enabled=true
+management.info.java.enabled=true
+management.info.os.enabled=true
+
