learnt about logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,10 @@ management.info.git.enabled=true
 management.info.java.enabled=true
 management.info.os.enabled=true
 
+#logging configuration
+logging.level.com.codingshuttle.Aryan.prod_ready_features.client=WARN
+#logging.level.root=debug
+logging.pattern.console=%d [%c] ---- %m%n
+!log handlers
+logging.file.name=application.log
+
